--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-play-button",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "react-play-button React component",
   "main": "lib/index.js",
   "jsnext:main": "es6/index.js",
@@ -18,11 +18,12 @@
     "test:watch": "nwb test --server"
   },
   "dependencies": {
-    "howler": "^2.0.0-beta8",
+    "howler": "^2.0.0",
     "lodash": "^4.6.1"
   },
   "peerDependencies": {
-    "react": "^15.0.0-rc.2"
+    "react": "^16",
+    "react-dom": "^16"
   },
   "devDependencies": {
     "nwb": "0.9.x",
